tests/ui/specialization/defaultimpl/specialization-wfcheck.stderr
error[E0277]: the trait bound `U: Eq` is not satisfied
  --> $DIR/specialization-wfcheck.rs:7:17
   |
LL | default impl<U> Foo<'static, U> for () {}
   |                 ^^^^^^^^^^^^^^^ the trait `Eq` is not implemented for `U`
   |
note: required by a bound in `Foo`
  --> $DIR/specialization-wfcheck.rs:5:18
   |
LL | trait Foo<'a, T: Eq + 'a> { }
   |                  ^^ required by this bound in `Foo`
help: consider restricting type parameter `U` with trait `Eq`
   |
LL | default impl<U: std::cmp::Eq> Foo<'static, U> for () {}
   |               ++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
